Added draggable analog shoot button, increased ground height to 90px, positioned controls below ground

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <button id="jumpBtn">↑ Jump</button>
             <div class="horizontal-controls">
                 <button id="leftBtn">← Left</button>
-                <div id="shootBtn" class="analog-btn">Shoot</div>
+                <div id="shootBtn" class="analog-btn">
+                    <div class="analog-thumb"></div>
+                </div>
                 <button id="rightBtn">→ Right</button>
             </div>
             <button id="duckBtn">↓ Duck</button>
