Increased ground height to 120px, used arrow-only directional buttons, moved analog shoot button to bottom right

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <canvas id="backgroundCanvas"></canvas>
         <canvas id="gameCanvas"></canvas>
         <div id="controls">
-            <button id="jumpBtn">↑ Jump</button>
+            <button id="jumpBtn">↑</button>
             <div class="horizontal-controls">
-                <button id="leftBtn">← Left</button>
-                <div id="shootBtn" class="analog-btn">
-                    <div class="analog-thumb"></div>
-                </div>
-                <button id="rightBtn">→ Right</button>
+                <button id="leftBtn">←</button>
+                <button id="rightBtn">→</button>
             </div>
-            <button id="duckBtn">↓ Duck</button>
+            <button id="duckBtn">↓</button>
             <button id="startBtn">Start Game</button>
             <button id="restartBtn">Restart Game</button>
+        </div>
+        <div id="shootBtn" class="analog-btn">
+            <div class="analog-thumb"></div>
         </div>
     </div>
     <script src="game.js"></script>
