Increased ground height to 120px, used arrow-only directional buttons, moved analog shoot button to bottom right

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         <canvas id="backgroundCanvas"></canvas>
         <canvas id="gameCanvas"></canvas>
         <div id="controls">
-            <button id="jumpBtn">↑</button>
+            <div class="vertical-controls">
+                <button id="jumpBtn">↑</button>
+                <button id="duckBtn">↓</button>
+            </div>
             <div class="horizontal-controls">
                 <button id="leftBtn">←</button>
                 <button id="rightBtn">→</button>
             </div>
-            <button id="duckBtn">↓</button>
             <button id="startBtn">Start Game</button>
             <button id="restartBtn">Restart Game</button>
         </div>
