--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         <canvas id="backgroundCanvas"></canvas>
         <canvas id="gameCanvas"></canvas>
         <div id="controls">
+            <div class="horizontal-controls">
+                <button id="leftBtn">←</button>
+            </div>
             <div class="vertical-controls">
                 <button id="jumpBtn">↑</button>
                 <button id="duckBtn">↓</button>
             </div>
             <div class="horizontal-controls">
-                <button id="leftBtn">←</button>
                 <button id="rightBtn">→</button>
             </div>
             <button id="startBtn">Start Game</button>
