Fixed InvalidStateError with image error handling, fixed jump/duck/shoot mechanics, increased bullet range to 200px, added player image inversion for left movement/shooting

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="loadingScreen">
-        <div id="loadingText">No man's Land</div>
+        <div id="loadingText" style="font-weight: bold;">No man's Land</div>
     </div>
     <div id="gameContainer" style="display: none;">
         <canvas id="backgroundCanvas"></canvas>
